--- a/prototype1.html
+++ b/prototype1.html
@@ -22,7 +22,7 @@
     <label class="long-bar-text">Secure Student Login</label>
     <label class="student-number" >Student Number</label>
     <input class="input-student-number" title="Enter your Student Number" id="js-input" type="text" name="studentNumber" maxlength="9" >
-    <button class="procced-button" onclick=" toPageN()" >Procced</button>
+    <button class="procced-button" onclick=" toPageN()" >Proceed</button>
   <label class="Sponsor-text">Switch to Sponsor Login Form</label>
   <img class="details" src="photos/details.PNG">
   <label class="long-bar-text Notices" >Notices</label>
