--- a/prototype2.html
+++ b/prototype2.html
@@ -27,7 +27,7 @@
     <input for="psw" name="password" class="input-password" title="Enter your LAN Password" type="password" >
     <label class="instruction">Please use your LAN Password</label>
   <button class="Login-button"  type="submit">Login</button>
-  <img class="details" src="photos/details.PNG">
+  <img class="details details2" src="photos/details.PNG">
   </form>
   </div>
  <script type="module" src="prototype.js">
