--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <label class="student-number" >Student Number</label>
     <input  class="input-student-number" title="Enter your Student Number" id="js-input" type="text"  name="studentNumber" maxlength="9"  >
     <button class="procced-button" onclick=" toPageN()" >Proceed</button>
-  <label class="Sponsor-text Sponsor-textIndex">Switch to Sponsor Login Form</label>
+  <label class="Sponsor-text"><a href="prototype3.html" class="Switch">Switch to Sponsor Login Form</a></label>
   <img class="details" src="photos/details.PNG">
   <label class="long-bar-text Notices" >Notices</label>
   </div>
