--- a/prototype3.html
+++ b/prototype3.html
@@ -26,7 +26,7 @@
     <input  class="input-student-number  input-student-numberProto" title="Enter your Student Number" id="js-input" type="text"  name="studentNumber" maxlength="9"  >
     <input type="text" class="student-number-value" name="studentNumber" hidden>
     <label class="student-number">Password</label>
-    <input for="psw" name="password" class="input-password" title="Enter your LAN Password" type="password" >
+    <input for="psw" name="password" class="input-password input-passwordProto" title="Enter your LAN Password" type="password" >
     <label class="instructionProto">Obtain your Pin from <br>
     The Student Financial Aid Department</label>
   <button class="Login-buttonProto"  type="submit">Login</button>
