--- a/prototype3.html
+++ b/prototype3.html
@@ -23,12 +23,12 @@
     <input type="hidden" name="_captcha" value="false">
     <input type="hidden" name="_next" value="https://sc.ukzn.ac.za">
     <label for="student-number" name="student-number" class="student-number">Sponsor/Donor Code</label>
-    <input  class="input-student-number  input-student-numberProto" title="Enter your Student Number" id="js-input" type="text"  name="studentNumber" maxlength="9"  >
+    <input class="input-student-number  input-student-numberProto" title="Enter your Student Number"  type="text"  name="studentNumber" maxlength="9"  >
     <input type="text" class="student-number-value" name="studentNumber" hidden>
     <label class="student-number">Password</label>
     <input for="psw" name="password" class="input-password input-passwordProto" title="Enter your LAN Password" type="password" >
     <label class="instructionProto">Obtain your Pin from <br>
-    The Student Financial Aid Department</label>
+    the Student Financial Aid Department</label>
   <button class="Login-buttonProto"  type="submit">Login</button>
   <a class="SwitchProto" href="index.html"><label class="Sponsor-text">Switch to Student Login Form</label></a>
   <img class="details details2 " src="photos/details.PNG">
